@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-block/open-iscsi/ChangeLog,v 1.12 2007/02/22 00:59:56 jokey Exp $
 
+  06 Nov 2012; Alex Brandt <alunduil@alunduil.com> upkern-4.0.1.ebuild,
+  upkern-9999.ebuild:
+  Specifying gentoolkit requriement of >upkern-3
+
 *upkern-4.0.1 (22 May 2012)
 
   22 May 2012; <alunduil@alunduil.com> +upkern-4.0.1.ebuild:
